--- a/main_app/templates/detail/profile.html
+++ b/main_app/templates/detail/profile.html
@@ -2,4 +2,9 @@
 
 <h1>Hi, Profile!</h1>
 
+<form id="logout-form" method="post" action="{% url 'logout' %}">
+    {% csrf_token %}
+    <button type="submit">Log out</button>
+</form>
+
 {% endblock %}
