--- a/main_app/static/css/detail/post.css
+++ b/main_app/static/css/detail/post.css
@@ -4,6 +4,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(10px);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
   }
 
   .subsection-title {
@@ -40,4 +45,10 @@
 
   .post-actions {
     display: flex;
+  }
+
+  .post-details>img {
+    width: 100%;
+    height: 200px;
+    object-fit: contain;
   }
