--- a/main_app/templates/form/postform.html
+++ b/main_app/templates/form/postform.html
@@ -1,24 +1,24 @@
 {% extends 'main/base.html' %}
 {% load static %}
+
+{% block head %}
+    <link rel="stylesheet" href="{% static 'css/form/postform.css' %}" />
+{% endblock %}
+
 {% block content %}
-<link rel="stylesheet" href="{% static 'css/main/postform.css' %}" />
+    <div class="page-header">
+        {% if post %}
+            <h1>Edit {{ object.title }}</h1>
+        {% else %}
+            <h1>Create a Post</h1>
+        {% endif %}
+    </div>
 
-
-
-
-<div class="page-header">
-    {% if post %}
-    <h1>Edit {{ object.title }}</h1>
-    {% else %}
-    <h1>Create a Post</h1>
-    {% endif %}
-</div>
-
-<form action="" method="post" class="form-container">
-    {% csrf_token %}
-    <table>
-        {{ form.as_table }}
-    </table>
-    <button type="submit" class="btn submit">Post</button>
-</form>
+    <form action="" method="post" enctype="multipart/form-data" class="form-container">
+        {% csrf_token %}
+        <table>
+            {{ form.as_table }}
+        </table>
+        <button type="submit" class="btn submit">Post</button>
+    </form>
 {% endblock %}
