--- a/main_app/templates/form/postform.html
+++ b/main_app/templates/form/postform.html
@@ -19,6 +19,6 @@
         <table>
             {{ form.as_table }}
         </table>
-        <button type="submit" class="btn submit">Post</button>
+        <button type="submit" class="btn">Update</button>
     </form>
 {% endblock %}
