--- a/main_app/static/css/form/postform.css
+++ b/main_app/static/css/form/postform.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 100%;
+  width: 75%;
   border-color: 1px solid rgb(212, 212, 212);
   background: rgba(255, 255, 255, 0.05);
   backdrop-filter: blur(10px);
@@ -19,25 +19,32 @@
 }
 
 table {
-  padding: 16px 16px 16px 8px;
-  width: 100%;
+  padding: 16px;
+  width: 75%;
+  overflow-x:scroll;
   border-spacing: 0 20px;
 }
 
+select {
+  width: 100%;
+  overflow-x: auto;
+}
+
 th {
-  text-align: left;
-  padding: 6px 20px 0 0;
+  text-align: center;
+  padding: 6px 6px 0 0;
   font-weight: normal;
   vertical-align: top;
   font-size: var(--font-reg);
 }
 
 td {
-  max-width: 60%;
+  width: 75%;
+  justify-items: center;
 }
 
 td>* {
-  width: 100%;
+  width: 78%;
   padding: 2px 4px;
   font-size: var(--font-l);
 }
@@ -48,6 +55,46 @@ td>textarea {
 }
 
 .btn {
-  align-self: flex-end;
-  margin-right: 40px;
+  font-size: var(--font-l);
+  padding: 12px 12px;
+  border-radius: 6px;
+  border-width: 0;
+  border-style: solid;
+  background-color: transparent;
+  text-decoration: none;
+  font-weight: 600;
+  cursor: pointer;
+  font-family: inherit;
+  color: #eee;
+}
+
+#image-clear_id>label{
+  width: 10%;
+}
+
+
+@media screen and (max-width: 768px) {
+  .form-container {
+    width: 99%;
+  }
+
+  table {
+    width: 100%;
+  }
+
+  th, td {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+  }
+
+  td>* {
+    font-size: 1rem;
+  }
+
+  .btn {
+    margin-right: 0;
+    margin-top: 20px;
+    align-self: center;
+  }
 }
