--- a/main_app/templates/detail/post.html
+++ b/main_app/templates/detail/post.html
@@ -24,4 +24,27 @@
         <a href="{% url 'post_delete' post.id %}" class="btn danger">Delete</a>
     </div>
 </section>
+
+<section class="comment-section">
+    <h2>Comments</h2>
+
+    {% if comments %}
+        <ul class="comment-list">
+            {% for comment in comments %}
+                <li class="comment">
+                    <p><strong>{{ comment.author|default:"Anonymous" }}</strong> on {{ comment.date }}</p>
+                    <p>{{ comment.text }}</p>
+                </li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <p>No comments yet. Be the first to comment!</p>
+    {% endif %}
+
+    <form method="post" class="comment-form">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="btn">Post Comment</button>
+    </form>
+</section>
 {% endblock %}
