--- a/main_app/templates/main/home.html
+++ b/main_app/templates/main/home.html
@@ -8,13 +8,15 @@
 
 {% block content %}
 <div class="page-content">
-    <h1>Welcome Home!</h1>
-
+    {% if user.is_authenticated %}
+    <h1>Welcome Back, {{ user }}!</h1>
+    {% else %}
+    <h1>Welcome, Guest!</h1>
     <p>
         All your preferred content in one place
     </p>
+    {% endif %}
 </div>
-
 
 <section class="card-container">
     {% for post in posts %}
