--- a/main_app/templates/form/login.html
+++ b/main_app/templates/form/login.html
@@ -2,14 +2,13 @@
 
 {% block content %}
 
-  <section>
+ 
+<section>
     <form action="{% url 'home' %}" method="post" class="login">
-        <h1>Login</h1>
-        {% csrf_token %} 
-        <table>
-            {{ form.as_table }}
-        </table>
-        <button type="submit" class="btn submit">Login</button>
+      <h1>Login</h1>
+      {% csrf_token %} {{ form.as_p }}
+      <input type="hidden" name="next" value="{{ next }}" />
+      <button type="submit" class="btn submit">Login</button>
     </form>
-</section>
+  </section>
 {% endblock %}
