--- a/main_app/templates/form/signup.html
+++ b/main_app/templates/form/signup.html
@@ -1,4 +1,6 @@
 {% extends 'main/base.html' %}
+{% load static %} 
+
 
 {% block content %}
 
@@ -8,7 +10,7 @@
 {% if error_message %}
 <p class="red-text">{{ error_message }}</p>
 {% endif %}
-<form action="{% url 'login' %}" method="post" class="form-container" autocomplete="off">
+<form action="{% url 'signup' %}" method="post" class="form-container" autocomplete="off">
     {% csrf_token %}
     <table>
         {{ form.as_table }}
