--- a/main_app/templates/main/base.html
+++ b/main_app/templates/main/base.html
@@ -29,10 +29,10 @@
                 </li>
                 {% else %}
                 <li>
-                    <button class="btn"><a href="/signup">Sign Up</a></button>
+                    <button class="btn"><a href="{% url 'signup' %}">Sign Up</a></button>
                 </li>
                 <li>
-                    <button class="btn"><a href="/login">Login</a></button>
+                    <button class="btn"><a href="{% url 'login' %}">Login</a></button>
                 </li>
                 {% endif %}
             </ul>
