--- a/main_app/templates/main/landing.html
+++ b/main_app/templates/main/landing.html
@@ -4,8 +4,20 @@
 
     <h1>Welcome to Arthouse!</h1>
 
-        <a href="/signup" class="btn submit">Signup</a>
-        <a href="/login" class="btn submit">Login</a>
-        
+    <div class="page-header">
+        <h1>Log in</h1>
+      </div>
+      {% if error_message %}
+        <p class="red-text">{{ error_message }}</p>
+      {% endif %}
+      <form action="" method="post" class="form-container" autocomplete="off">
+        {% csrf_token %}
+        <table>
+          {{ form.as_table }}
+        </table>
+        <button type="submit" class="btn submit">Submit</button>
+
+        <p>Are you a new user? <a href="/signup">Sign up</a> here</p>
+      </form>
 {% endblock %}
 
